Revert activity calendar overflow, fix user profile bar date format

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -155,11 +155,8 @@
 
 .user-activities-calendar {
   display: block;
-  position: relative;
 
   margin-bottom: 10px;
   padding: 10px;
   border: 1px solid $gray-lighter;
-
-  overflow-y: scroll;
 }
